[package]
name = "tokio-io-mock-fork"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-core = "0.3.31"
tokio = { version = "1.44.1", features = ["time"] }
tokio-stream = "0.1.17"

[dev-dependencies]
futures-util = "0.3.31"
tokio = { version = "1.44.1", features = ["io-util", "macros", "rt", "test-util"] }
